# vsub

./: .gitignore  Cargo.toml  README.md  config.toml  pyproject.toml
docs/: README.md  architecture.md  cli.md  config.md  cr.md  development.md  examples.md  faq.md  modules.md
python/: requirements.txt  whisper_engine.py
src/: lib.rs  main.rs
src/asr/: engine.rs  mod.rs
src/cli/: args.rs  mod.rs
src/core/: audio.rs  config.rs  mod.rs  subtitle.rs  video.rs
tests/: conftest.py  test_asr.py  test_audio.py  test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_integration.py  test_subtitle.py  test_video.py
vsub/: __init__.py  __main__.py  asr.py  audio.py  cli.py  config.py  core.py  device.py  subtitle.py  video.py
